[package]
name = "chashmap"
version = "2.2.2"
authors = ["ticki <Ticki@users.noreply.github.com>"]
description = "Fast, concurrent hash maps with extensive API."
repository = "https://gitlab.redox-os.org/redox-os/chashmap"
documentation = "https://docs.rs/chashmap"
license = "MIT"
keywords = ["async", "hashmap", "concurrent", "parking_lot", "lock", "map"]
exclude = ["target", "Cargo.lock"]
edition = "2018"

[dependencies]
future-parking_lot = "0.3.3"
futures = "0.3.1"
parking_lot = { version = "0.9.0", features = [ "owning_ref" ] }
owning_ref = "0.4"
lock_api = "0.3.2"