[package]
name = "async-chashmap"
version = "2.2.2"
authors = ["ticki <Ticki@users.noreply.github.com>"]
description = "Fast, concurrent hash maps with extensive API."
repository = "https://gitlab.redox-os.org/redox-os/chashmap"
documentation = "https://docs.rs/chashmap"
license = "MIT"
keywords = ["async", "hashmap", "concurrent", "parking_lot", "lock", "map"]
exclude = ["target", "Cargo.lock"]
edition = "2018"

[dependencies]
async-std = "1.4.0"

[dev-dependencies]
futures = "0.3.1"
tokio = { version = "0.2.6", features = [ "full" ] }